--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "nocache": "^2.1.0",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.2"
   }
